# AdventOfCode

./: .gitignore  CMakeLists.txt
2024/Day1/: CMakeLists.txt  Puzzle1.cpp
2024/Day2/: CMakeLists.txt  Puzzle.cpp
